kubernetes/apps/default/pingvin-share/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pingvin-share
  namespace: default
  annotations:
    hajimari.io/icon: mdi:account-arrow-up
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "share.${PUBLIC_DOMAIN}"
  rules:
    - backendRefs:
        - name: pingvin
          port: 3000
